# SqlRender

./: .Rbuildignore  .classpath  .cproject  .gitignore  .project  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  LICENSE.txt  NAMESPACE  NEWS  NEWS.md  README.md  SqlRender.Rproj  _pkgdown.yml  build.xml  cran-comments.md  deploy.sh  license_header_stub.txt  pom.xml
R/: HelperFunctions.R  ManualExports.R  PackageMaintenance.R  RcppExports.R  RenderSql.R  SQLRender.R  ShinyApps.R  SparkSql.R  SqlRender.R
doc/: SqlRender.html  SqlSplit.html  SqlTranslate.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/: 404.html  authors.html  index.html  pkgdown.yml  pull_request_template.html  sitemap.xml
extras/: PackageMaintenance.R
java/: SqlRender.jardesc
java-src/: SqlRender.jardesc  SqlRender.java  SqlSplit.java  SqlTranslate.java  StringUtils.java  TestSqlRender.java  replacementPatterns.csv
man/: SQLRender-package.Rd  SQLRender.Rd  SqlRender-package.Rd  SqlRender.Rd  camelCaseToSnakeCase.Rd  camelCaseToSnakeCaseNames.Rd  camelCaseToTitleCase.Rd  createRWrapperForSql.Rd  getTempTablePrefix.Rd  launchSqlDeveloper.Rd  launchSqlRenderDeveloper.Rd  listSupportedDialects.Rd  loadRenderTranslateSql.Rd  readSql.Rd  render.Rd  renderSql.Rd  renderSqlFile.Rd  snakeCaseToCamelCase.Rd  snakeCaseToCamelCaseNames.Rd  (+9 more)
standalone/: CMakeLists.txt  StandaloneBuildInstructions.txt
standalone/src/: main.cpp
(+117 files in other folders)
